# webgpu

./: Cargo.toml  README.md
.github/workflows/: pages.yml
assets/models/: jax.gltf
examples/: bloom.rs  computenbody.rs  computeparticles.rs  deferred.rs  deferredmultisampling.rs  deferredshadows.rs  gears.rs  gltf.rs  gltfskinning.rs  indirectdraw.rs  instancing.rs  multisampling.rs  multisamplingalphatocoverage.rs  occlusionquery.rs  parallaxmapping.rs  particlesystem.rs  pbr.rs  pbribl.rs  pbrtexture.rs  pipelines.rs  radialblur.rs  shadowmapping.rs  shadowmappingcascade.rs  shadowmappingomni.rs  ssao.rs  stencilbuffer.rs  textmesh.rs  textoverlay.rs  texture.rs  texturearray.rs  texturecubemap.rs  texturemipmapgen.rs  triangle.rs  vertexattributes.rs
scripts/: build-wasm.sh
shaders/: bloom.wgsl  computenbody_compute.wgsl  computenbody_render.wgsl  computeparticles.wgsl  deferred.wgsl  deferredmultisampling.wgsl  deferredshadows.wgsl  gears.wgsl  gltf.wgsl  gltfskinning.wgsl  indirectdraw.wgsl  instancing.wgsl  multisampling.wgsl  multisamplingalphatocoverage.wgsl  occlusionquery.wgsl  parallaxmapping.wgsl  particlesystem.wgsl  pbr.wgsl  pbribl.wgsl  pbrtexture.wgsl  pipelines.wgsl  radialblur.wgsl  shadowmapping.wgsl  shadowmappingcascade.wgsl  shadowmappingcascade_depth.wgsl  shadowmappingomni.wgsl  shadowmappingomni_offscreen.wgsl  ssao.wgsl  stencilbuffer.wgsl  textmesh.wgsl  textoverlay.wgsl  texture.wgsl  texturearray.wgsl  texturecubemap.wgsl  texturemipmapgen.wgsl  texturemipmapgen_mipmap.wgsl  triangle.wgsl  vertexattributes.wgsl
src/: asset.rs  gltf_scene.rs  gltf_skin.rs  joystick.rs  lib.rs  main.rs  skybox.rs
web/: example.html  index.html
