[package]
name = "webgpu"
version = "0.1.0"
edition = "2024"
description = "Rust WebGPU/wgpu examples inspired by Sascha Willems' Vulkan examples."
license = "MIT"

[[bin]]
name = "serve"
path = "src/main.rs"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
sib = { git = "https://github.com/PooyaEimandar/sib", features = ["render"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sib = { git = "https://github.com/PooyaEimandar/sib", features = [
    "net-file-server",
    "net-h1-server",
    "render",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.122"
