[package]
name = "webgpu"
version = "0.1.0"
edition = "2024"
description = "Rust WebGPU/wgpu examples inspired by Sascha Willems' Vulkan examples."
license = "MIT"

[[bin]]
name = "serve"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
bytes = "1.11.1"
bytemuck = { version = "1.25.0", features = ["derive"] }
gltf = { version = "1.4.1", default-features = false, features = [
    "names",
    "utils",
] }
http = "1.4.2"
image = { version = "0.25.9", default-features = false, features = [
    "jpeg",
    "png",
] }
sib = { git = "https://github.com/PooyaEimandar/sib", features = ["render"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sib = { git = "https://github.com/PooyaEimandar/sib", features = [
    "net-file-server",
    "net-h1-server",
    "render",
] }
ureq = "3.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.100"
wasm-bindgen = "0.2.123"
wasm-bindgen-futures = "0.4.73"
web-sys = { version = "0.3.100", features = [
    "Blob",
    "BlobPropertyBag",
    "console",
    "ErrorEvent",
    "MessageEvent",
    "Response",
    "Url",
    "Window",
    "Worker",
] }
